--- a/amplify.yml
+++ b/amplify.yml
@@ -3,6 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
+        # Show Node & npm versions (for debugging)
+        - node -v
+        - npm -v
+
+        # Downgrade npm to a stable version to avoid "Exit handler never called" bug
+        - npm install -g npm@9
+        - npm -v
+
+        # Now install project dependencies
         - npm install --legacy-peer-deps
     build:
       commands:
